apps/media/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.5.2.5491-ls155
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: config-pvc
              mountPath: "/config"
      volumes:
        - name: config-pvc
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: config-cm
          configMap:
            name: prowlarr-cm
