apps/media/prowlarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  ingressClassName: "cilium"
  rules:
    - host: prowlarr.g2net.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: http
  tls:
    - hosts:
        - prowlarr.g2net.xyz
      secretName: g2net-xyz-tls
